--- a/assets/scss/icons.scss
+++ b/assets/scss/icons.scss
@@ -13,6 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-fire:before {
+  content: "\ea43";
+}
 .icon-hamburger-menu-3:before {
   content: "\e9f8";
 }
