--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,6 +23,8 @@
 @import './scss/termo-temps';
 @import './scss/thermo-select-plan-modal';
 
+@import './scss/accesscode-keypad';
+
 @import './scss/responsive-calendar';
 
 @keyframes spin {
