--- a/assets/scss/termo-status.scss
+++ b/assets/scss/termo-status.scss
@@ -12,15 +12,16 @@
 .thermo-status--icon {
 	position: absolute;
 	left: 135px;
-	top: 155px;
+	top: 135px;
 	font-size: 4.5rem;
 }
 
 .thermo-status--icon-lock {
 	position: absolute;
-	left: 93px;
-	top: 48px;
-	font-size: 4.5rem;
+	left: 85px;
+	top: 35px;
+	font-size: 6rem;
+	cursor: pointer;
 }
 
 .thermo-status--value {
@@ -42,13 +43,13 @@
 	}
 
 	.thermo-status--temp {
-		top: 130px;
+		top: 110px;
 		color: $red;
 	}
 
 	.thermo-status--humi {
 		color: $teal;
-		top: 176px;
+		top: 156px;
 	}
 }
 
@@ -79,4 +80,12 @@
 
 .thermo-room-temps {
 	font-size: 3rem;
+}
+
+.thermo-status--run-duration {
+	position: absolute;
+	top: 200px;
+	left: 65px;
+	font-size: 1.5rem;
+	color: $gray;
 }
