--- a/assets/scss/termo-status.scss
+++ b/assets/scss/termo-status.scss
@@ -1,26 +1,27 @@
 .thermo-status {
 	margin-top: 20px;
 	text-align: center;
+	position: relative;
 }
 
 .thermo-status--house-icon {
-	font-size: 24rem;
+	font-size: 33rem;
 	font-weight: 100;
 	margin: 0 -1rem;
 }
 
 .thermo-status--icon {
 	position: absolute;
-	left: 135px;
-	top: 135px;
-	font-size: 4.5rem;
+	left: 185px;
+	top: 155px;
+	font-size: 5.5rem;
 }
 
 .thermo-status--icon-lock {
 	position: absolute;
-	left: 85px;
-	top: 35px;
-	font-size: 6rem;
+	left: 125px;
+	top: 45px;
+	font-size: 7rem;
 	cursor: pointer;
 }
 
@@ -39,42 +40,51 @@
 
 	.thermo-status--value {
 		position: absolute;
-		left: 40px;
+		left: 70px;
 	}
 
 	.thermo-status--temp {
-		top: 110px;
+		top: 160px;
 		color: $red;
 	}
 
 	.thermo-status--humi {
 		color: $teal;
-		top: 156px;
+		top: 200px;
+	}
+}
+
+.thermo-status--weather {
+	position: absolute;
+	top: 0;
+	left: -125px;
+	width: 100%;
+	text-align: center;
+
+	i {
+		font-size: 4em;
 	}
 }
 
 .thermo-status--outside {
-	display: inline-block;
+	position: absolute;
+	top: -10px;
+	right: -130px;
+	width: 100%;
+	text-align: center;
 
 	i {
 		font-size: 3rem;
 	}
 
 	.thermo-status--temp {
+		position: relative;
+		left: -40px;
 		color: $maroon;
 	}
 
 	.thermo-status--humi {
 		color: $navy;
-	}
-
-	.thermo-status--weather {
-		margin-bottom: 40px;
-		text-align: center;
-
-		i {
-			font-size: 3em;
-		}
 	}
 }
 
@@ -84,8 +94,52 @@
 
 .thermo-status--run-duration {
 	position: absolute;
-	top: 200px;
-	left: 65px;
+	top: 220px;
+	left: 180px;
+	text-align: center;
 	font-size: 1.5rem;
 	color: $gray;
+}
+
+
+.thermo-target {
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 250px;
+}
+
+.thermo-target--control {
+	vertical-align: middle;
+}
+
+.thermo-target--button {
+	border: 0;
+	background: none;
+	font-size: 5rem;
+	vertical-align: middle;
+	color: $gray;
+	padding: 0 5px;
+
+	&:first-child {
+		padding-left: 0;
+	}
+
+	&:last-child {
+		padding-right: 0;
+	}
+}
+
+.thermo-target--decrease {
+
+}
+
+.thermo-target--increase {
+
+}
+
+.thermo-target--value {
+	font-size: 4.5rem;
+	font-weight: bold;
+	vertical-align: middle;
 }
