--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,6 +17,7 @@
 @import './scss/icons';
 @import './scss/colors';
 @import './scss/termo-status';
+@import './scss/termo-target';
 @import './scss/termo-plan';
 @import './scss/thermo-default-plans';
 @import './scss/termo-temps';
