Show statistics for the last month in the statistics overlay.

--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -250,8 +250,14 @@
 			<div class="modal-body">
 				<div class="row">
 					<div class="col-xs-12">
+						<h2>Heating today</h2>
 						<div class="thermo-component">
 							<canvas id="heatingHistoryChart" width="600" height="200"></canvas>
+						</div>
+
+						<h2>Statistics in the last 30 days</h2>
+						<div class="thermo-component">
+							<canvas id="statisticsLast30Days" width="600" height="200"></canvas>
 						</div>
 					</div>
 				</div>
