--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -112,7 +112,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="heating-config-label">Heating statistics</h4>
+				<h4 class="modal-title" id="heating-config-label">Settings</h4>
 			</div>
 			<div class="modal-body">
 				<div class="row">
@@ -255,9 +255,14 @@
 							<canvas id="heatingHistoryChart" width="600" height="200"></canvas>
 						</div>
 
-						<h2>Statistics in the last 30 days</h2>
+						<h2>Statistics for the last 30 days</h2>
 						<div class="thermo-component">
 							<canvas id="statisticsLast30Days" width="600" height="200"></canvas>
+						</div>
+
+						<h2>Statistics this year by month</h2>
+						<div class="thermo-component">
+							<canvas id="statisticsByMonth" width="600" height="200"></canvas>
 						</div>
 					</div>
 				</div>
