--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -11,7 +11,7 @@
 						<li class="dropdown-header">Heating</li>
 						<li><a href="javascript:void()" ng-click="statisticsModalOpen()"><i class="icon-stats"></i> Statistics</a></li>
 						<li><a href="#" data-toggle="modal" data-target="#heating-config"><i class="icon-settings"></i> Config</a></li>
-						<li><a href="javascript:void()" ng-click="restart()"><i class="icon-continuous"></i> Restart sensors</a></li>
+						<li><a href="javascript:void()" ng-click="restartSensor()"><i class="icon-continuous"></i> Restart sensors</a></li>
 						<li role="separator" class="divider"></li>
 						<li class="dropdown-header">Security</li>
 					</ul>
