--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -96,8 +96,12 @@
 			<div class="thermo-component thermo-room-temps">
 				<div ng-repeat="(id, data) in inside.individual">
 					<div class="color-{{scope().restartSensorInProgress ? 'yellow' : (data.active ? 'green' : 'red')}}">
-						<div class="thermo-room--label">{{roomIdToLabel[id] || id}} ({{id}})</div>
-						<i class="icon-thermometer6"></i> <span ng-bind-html="data.temperature | float"></span> <i class="icon-humidity"></i> {{data.humidity}}
+						<div class="thermo-room--label">{{roomIdToLabel[id] || id}} <span>({{id}})</span></div>
+						<div class="thermo-room--values">
+							<i class="icon-thermometer6"></i>
+							<span ng-bind-html="data.temperature | float"></span>
+							<i class="icon-humidity"></i>
+							{{data.humidity}}
 					</div>
 				</div>
 			</div>
