Room status redesigned.

--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -14,6 +14,7 @@ $maroon: #85144b;
 $white: #fff;
 $silver: #ddd;
 $gray: #aaa;
+$dark-grey: #666;
 $black: #111;
 
 $colors: (
@@ -33,6 +34,7 @@ $colors: (
 	"white": $white,
 	"silver": $silver,
 	"gray": $gray,
+	"dark-grey": $dark-grey,
 	"black": $black
 );
 
