--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -14,7 +14,7 @@ $maroon: #85144b;
 $white: #fff;
 $silver: #ddd;
 $gray: #aaa;
-$dark-grey: #666;
+$dark-gray: #666;
 $black: #111;
 
 $colors: (
@@ -34,7 +34,7 @@ $colors: (
 	"white": $white,
 	"silver": $silver,
 	"gray": $gray,
-	"dark-grey": $dark-grey,
+	"dark-gray": $dark-gray,
 	"black": $black
 );
 
