--- a/assets/scss/termo-plan.scss
+++ b/assets/scss/termo-plan.scss
@@ -80,18 +80,40 @@
 		float: left;
 		text-align: center;
 		line-height: 18px;
-		padding: 3px;
-		overflow: hidden;
 		box-sizing: border-box;
-		border: 3px solid;
+		border: 1px solid;
 		border-left-width: 0;
+		height: 0;
+		position: relative;
 
 		i {
+			position: relative;
+			top: 5px;
 			font-size: 3rem;
 		}
 
-		&:first-child {
-			border-left-width: 3px;
+		&:before {
+			content: '';
+			position: absolute;
+			top: -5px;
+			left: -5px;
+			width: 10px;
+			height: 10px;
+			background: $white;
+			border-radius: 5px;
+			border: 2px solid $dark-gray;
+		}
+
+		&.last-child:after {
+			content: '';
+			position: absolute;
+			top: -5px;
+			right: -5px;
+			width: 10px;
+			height: 10px;
+			background: $white;
+			border-radius: 5px;
+			border: 2px solid $dark-gray;
 		}
 	}
 
@@ -107,19 +129,32 @@
 		top: 0;
 		margin-left: -17px;
 		color: $black;
+		transform: rotate(-45deg);
+	}
+
+	.thermo-plan--label--first {
+		margin-left: 0;
+	}
+
+	.thermo-plan--label--last {
+		margin-left: 0;
+		right: 0;
 	}
 
 	.thermo-plan--current-time {
 		position: relative;
-		height: 20px;
-		margin-top: -17px;
+		margin-left: 5px;
 		font-weight: bold;
+
+		&.thermo-plan--last-part {
+			margin-left: -50px;
+		}
 	}
 
 	.thermo-plan--pointer {
 		position: absolute;
-		top: -50px;
-		height: 50px;
+		top: -25px;
+		height: 25px;
 		width: 2px;
 		margin-left: -1px;
 	}
