--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -5,7 +5,7 @@
 				SmartHome
 
 				<div class="pull-left">
-					<button class="dropdown-toggle icon-hamburger-menu-2 reset-button color-gray" data-toggle="dropdown" role="button" uib-dropdown-toggle aria-haspopup="true" aria-expanded="false">
+					<button class="dropdown-toggle icon-hamburger-menu-2 reset-button color-dark-gray" data-toggle="dropdown" role="button" uib-dropdown-toggle aria-haspopup="true" aria-expanded="false">
 					</button>
 					<ul class="dropdown-menu" uib-dropdown-menu role="menu">
 						<li class="dropdown-header">Heating</li>
@@ -18,7 +18,7 @@
 				</div>
 
 				<div class="pull-right">
-					<div class="thermo-refresh icon-continuous in-progress" ng-class="{'color-gray': currentDate - lastUpdate < 5 * 60 * 1000, 'color-orange': currentDate - lastUpdate >= 5 * 60 * 1000 && currentDate - lastUpdate < 10 * 60 * 1000, 'color-red': currentDate - lastUpdate >= 10 * 60 * 1000, 'thermo-spin': initInProgress}" ng-click="refresh()"></div>
+					<div class="thermo-refresh icon-continuous in-progress" ng-class="{'color-dark-gray': currentDate - lastUpdate < 5 * 60 * 1000, 'color-orange': currentDate - lastUpdate >= 5 * 60 * 1000 && currentDate - lastUpdate < 10 * 60 * 1000, 'color-red': currentDate - lastUpdate >= 10 * 60 * 1000, 'thermo-spin': initInProgress}" ng-click="refresh()"></div>
 				</div>
 			</div>
 		</div>
@@ -28,53 +28,55 @@
 <div class="container mainContent">
 	<div class="row" style="{{init ? '' : 'display:none;'}}">
 		<div class="col-xs-12 col-sm-6 col-lg-4">
-			<div class="thermo-component thermo-status">
-				<div class="thermo-status--outside">
-					<div class="thermo-status--weather">
-						<i class="{{outside.weatherIconClass}}"></i>
+			<div class="thermo-component">
+				<div class="thermo-status">
+					<div class="thermo-status--outside">
+						<div class="thermo-status--weather">
+							<i class="{{outside.weatherIconClass}}"></i>
+						</div>
+
+						<div class="thermo-status--value thermo-status--temp">
+							<i class="icon-thermometer6"></i> <span ng-bind-html="outside.temp | float"></span>
+						</div>
+
+						<div class="thermo-status--value thermo-status--humi">
+							<i class="icon-humidity"></i> {{outside.humi}}
+						</div>
 					</div>
 
-					<div class="thermo-status--value thermo-status--temp">
-						<i class="icon-thermometer6"></i> <span ng-bind-html="outside.temp | float"></span>
-					</div>
+					<div class="thermo-status--inside">
+						<i class="icon-house-simple thermo-status--house-icon color-{{security === SECURITY_STATUSES.PREACTIVATED ? 'orange' : security === SECURITY_STATUSES.ACTIVATED ? 'red' : 'dark-gray'}}"></i>
 
-					<div class="thermo-status--value thermo-status--humi">
-						<i class="icon-humidity"></i> {{outside.humi}}
+						<i class="icon-air-conditioner-3 thermo-status--icon color-{{isHeatingOn ? 'olive' : 'dark-gray'}}"></i>
+						<i class="icon-{{security === SECURITY_STATUSES.ARMED ? 'padlock-closed' : 'padlock-open'}} thermo-status--icon-lock color-{{SECURITY_ARMED_STATUSES.includes(security) ? 'red' : security === SECURITY_STATUSES.ARMING ? 'orange' : 'green'}}" ng-click="scope().securityToggleAlarm()"></i>
+						<div class="thermo-status--value thermo-status--temp">
+							<i class="icon-thermometer6"></i> <span ng-bind-html="inside.temp | float"></span>
+						</div>
+
+						<div class="thermo-status--value thermo-status--humi">
+							<i class="icon-humidity"></i> {{inside.humi}}
+						</div>
+
+						<div class="thermo-status--run-duration">
+							<i class="icon-fire"></i> {{statisticsForToday.heatingDuration | duration}}
+						</div>
 					</div>
 				</div>
 
-				<div class="thermo-status--inside">
-					<i class="icon-house-simple thermo-status--house-icon color-{{security === SECURITY_STATUSES.PREACTIVATED ? 'orange' : security === SECURITY_STATUSES.ACTIVATED ? 'red' : 'gray'}}"></i>
-
-					<i class="icon-air-conditioner-3 thermo-status--icon color-{{isHeatingOn ? 'olive' : 'gray'}}"></i>
-					<i class="icon-{{security === SECURITY_STATUSES.ARMED ? 'padlock-closed' : 'padlock-open'}} thermo-status--icon-lock color-{{SECURITY_ARMED_STATUSES.includes(security) ? 'red' : security === SECURITY_STATUSES.ARMING ? 'orange' : 'green'}}" ng-click="scope().securityToggleAlarm()"></i>
-					<div class="thermo-status--value thermo-status--temp">
-						<i class="icon-thermometer6"></i> <span ng-bind-html="inside.temp | float"></span>
+				<div class="thermo-target">
+					<div class="thermo-target--control">
+						<button type="button" class="thermo-target--button thermo-target--decrease" ng-click="scope().tempAdjust(targetTemp.ref._id, -0.1)">-</button>
+						<span class="thermo-target--value color-{{targetTemp.ref.color}}"><span ng-bind-html="targetTemp.ref.value | float"></span> &deg;C</span>
+						<button type="button" class="thermo-target--button thermo-target--increase" ng-click="scope().tempAdjust(targetTemp.ref._id, 0.1)">+</button>
 					</div>
-
-					<div class="thermo-status--value thermo-status--humi">
-						<i class="icon-humidity"></i> {{inside.humi}}
-					</div>
-
-					<div class="thermo-status--run-duration">
-						<i class="icon-fire"></i> {{statisticsForToday.heatingDuration | duration}}
-					</div>
-				</div>
-			</div>
-
-			<div class="thermo-component thermo-target">
-				<div class="thermo-target--control">
-					<button type="button" class="thermo-target--button thermo-target--decrease" ng-click="scope().tempAdjust(targetTemp.ref._id, -0.1)">-</button>
-					<span class="thermo-target--value color-{{targetTemp.ref.color}}"><span ng-bind-html="targetTemp.ref.value | float"></span> &deg;C</span>
-					<button type="button" class="thermo-target--button thermo-target--increase" ng-click="scope().tempAdjust(targetTemp.ref._id, 0.1)">+</button>
 				</div>
 			</div>
 		</div>
 
-		<div class="col-xs-12 col-sm-6 col-lg-4">
-			<div class="thermo-component">
-				<div ng-repeat="(id, data) in inside.individual">
-					<div class="thermo-room">
+		<div class="col-xs-12 col-sm-6 col-lg-8">
+			<div class="row">
+				<div ng-repeat="(id, data) in inside.individual" class="col-xs-12 col-lg-6">
+					<div class="thermo-room thermo-component">
 						<div class="thermo-room--status color-bg-{{scope().restartSensorInProgress ? 'yellow' : (data.active ? 'green' : 'red')}}"></div>
 						<div class="thermo-room--label">{{roomIdToLabel[id] || id}} <span>({{id}})</span></div>
 						<div class="row">
@@ -96,23 +98,24 @@
 			</div>
 		</div>
 
-		<div class="col-xs-12 col-lg-4">
-			<h3>{{todaysPlan.plan.ref.name}}</h3>
-			<div class="thermo-component thermo-plan--vertical">
-				<div class="thermo-plan--current-time" style="top: {{percentInDay}}%;">
+		<div class="col-xs-12">
+			<div class="thermo-component thermo-plan--horizontal">
+				<h3>{{todaysPlan.plan.ref.name}}</h3>
+
+				<div class="thermo-plan--current-time" ng-class="{'thermo-plan--last-part': percentInDay > 80}" style="left: {{percentInDay}}%;">
 					{{currentTime}}
 				</div>
 
-				<div class="thermo-plan--labels">
-					<div class="thermo-plan--label" ng-repeat="interval in todaysPlan.plan.ref.intervals" style="top: {{interval.labelPosition}}%">{{interval.label}}</div>
-					<div class="thermo-plan--label" style="top: 100%">23:59</div>
-				</div>
-
 				<div class="thermo-plan--chart clearfix">
-					<div class="thermo-plan--period color-{{interval.temp.ref.color}} clearfix" style="height: {{interval.blockPosition}}%;" ng-repeat="interval in todaysPlan.plan.ref.intervals | filter:blockPosition">
+					<div class="thermo-plan--period color-{{interval.temp.ref.color}}" ng-class="{'last-child': todaysPlan.plan.ref.intervals.indexOf(interval) === todaysPlan.plan.ref.intervals.length - 1}" style="width: {{interval.blockPosition}}%;" ng-repeat="interval in todaysPlan.plan.ref.intervals | filter:blockPosition">
 						<i class="{{interval.temp.ref.iconClass}}"></i>
 					</div>
-					<div class="thermo-plan--pointer color-bg-{{scope().targetTemp.ref.color}}" style="top: {{percentInDay}}%;"></div>
+					<div class="thermo-plan--pointer color-bg-{{scope().targetTemp.ref.color}}" style="left: {{percentInDay}}%;"></div>
+				</div>
+
+				<div class="thermo-plan--labels">
+					<div class="thermo-plan--label" ng-repeat="interval in todaysPlan.plan.ref.intervals" ng-class="{'thermo-plan--label--first': todaysPlan.plan.ref.intervals.indexOf(interval) === 0}" style="left: {{interval.labelPosition}}%">{{interval.label}}</div>
+					<div class="thermo-plan--label thermo-plan--label--last">23:59</div>
 				</div>
 			</div>
 		</div>
@@ -132,17 +135,15 @@
 			<div class="modal-body">
 				<div class="row">
 					<div class="col-xs-12">
-						<div class="thermo-component">
-							<h2>Temperature settings</h2>
-							<div class="thermo-temps row">
-								<div class="thermo-temps--temp col-xs-6 col-md-4 col-lg-3" ng-repeat="temp in temps">
-									<div class="color-{{temp.ref.color}}">
-										<i class="{{temp.ref.iconClass}}"></i> <span class="thermo-temps--temp-name">{{temp.name}}</span>
-										<div class="thermo-temps--temp-control" data-id="{{temp.ref._id}}">
-											<button type="button" class="thermo-temps--temp-button thermo-temps--temp--decrease" ng-click="scope().tempAdjust(temp.ref._id, -0.1)">-</button>
-											<span class="thermo-temps--temp-value"><span ng-bind-html="temp.ref.value | float"></span> &deg;C</span>
-											<button type="button" class="thermo-temps--temp-button thermo-temps--temp--increase" ng-click="scope().tempAdjust(temp.ref._id, 0.1)">+</button>
-										</div>
+						<h2>Temperature settings</h2>
+						<div class="thermo-temps row">
+							<div class="thermo-temps--temp col-xs-6 col-md-4 col-lg-3" ng-repeat="temp in temps">
+								<div class="color-{{temp.ref.color}}">
+									<i class="{{temp.ref.iconClass}}"></i> <span class="thermo-temps--temp-name">{{temp.name}}</span>
+									<div class="thermo-temps--temp-control" data-id="{{temp.ref._id}}">
+										<button type="button" class="thermo-temps--temp-button thermo-temps--temp--decrease" ng-click="scope().tempAdjust(temp.ref._id, -0.1)">-</button>
+										<span class="thermo-temps--temp-value"><span ng-bind-html="temp.ref.value | float"></span> &deg;C</span>
+										<button type="button" class="thermo-temps--temp-button thermo-temps--temp--increase" ng-click="scope().tempAdjust(temp.ref._id, 0.1)">+</button>
 									</div>
 								</div>
 							</div>
@@ -150,56 +151,52 @@
 					</div>
 
 					<div class="col-xs-12">
-						<div class="thermo-component">
-							<h2>Plan for the week</h2>
-							<div class="thermo-default-plans clearfix">
-								<div class="thermo-default-plans--plan" ng-repeat="defaultPlan in heatingDefaultPlans" ng-if="defaultPlan.dayOfWeek > 0" data-toggle="modal" data-target=".thermo-select-plan--modal" data-default-week-plan="{{defaultPlan.dayOfWeek}}">
-									<div class="thermo-default-plans--day-name thermo-default-plans--day-name-full">{{defaultPlan.nameOfDay}}</div>
-									<div class="thermo-default-plans--day-name thermo-default-plans--day-name-abbr">{{defaultPlan.nameOfDay | first2chars}}</div>
+						<h2>Plan for the week</h2>
+						<div class="thermo-default-plans clearfix">
+							<div class="thermo-default-plans--plan" ng-repeat="defaultPlan in heatingDefaultPlans" ng-if="defaultPlan.dayOfWeek > 0" data-toggle="modal" data-target=".thermo-select-plan--modal" data-default-week-plan="{{defaultPlan.dayOfWeek}}">
+								<div class="thermo-default-plans--day-name thermo-default-plans--day-name-full">{{defaultPlan.nameOfDay}}</div>
+								<div class="thermo-default-plans--day-name thermo-default-plans--day-name-abbr">{{defaultPlan.nameOfDay | first2chars}}</div>
 
-									<i class="{{defaultPlan.plan.ref.iconClass}}"></i>
-								</div>
+								<i class="{{defaultPlan.plan.ref.iconClass}}"></i>
+							</div>
 
-								<div class="thermo-default-plans--plan" data-toggle="modal" data-target=".thermo-select-plan--modal" data-default-week-plan="0">
-									<div class="thermo-default-plans--day-name thermo-default-plans--day-name-full">{{heatingDefaultPlans[0].nameOfDay}}</div>
-									<div class="thermo-default-plans--day-name thermo-default-plans--day-name-abbr">{{heatingDefaultPlans[0].nameOfDay | first2chars}}</div>
+							<div class="thermo-default-plans--plan" data-toggle="modal" data-target=".thermo-select-plan--modal" data-default-week-plan="0">
+								<div class="thermo-default-plans--day-name thermo-default-plans--day-name-full">{{heatingDefaultPlans[0].nameOfDay}}</div>
+								<div class="thermo-default-plans--day-name thermo-default-plans--day-name-abbr">{{heatingDefaultPlans[0].nameOfDay | first2chars}}</div>
 
-									<i class="{{heatingDefaultPlans[0].plan.ref.iconClass}}"></i>
-								</div>
+								<i class="{{heatingDefaultPlans[0].plan.ref.iconClass}}"></i>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-xs-12">
-						<div class="thermo-component">
-							<h2>Calendar</h2>
+						<h2>Calendar</h2>
 
-							<!-- Responsive calendar - START -->
-							<div class="responsive-calendar">
-								<div class="controls">
-									<a class="pull-left" data-go="prev"><div class="btn btn-primary">Prev</div></a>
-									<h4>
-										<span data-head-year></span>
-										<span data-head-month></span>
-									</h4>
-									<a class="pull-right" data-go="next"><div class="btn btn-primary">Next</div></a>
-								</div>
-								<hr/>
-								<div class="day-headers">
-									<div class="day header">Mon</div>
-									<div class="day header">Tue</div>
-									<div class="day header">Wed</div>
-									<div class="day header">Thu</div>
-									<div class="day header">Fri</div>
-									<div class="day header">Sat</div>
-									<div class="day header">Sun</div>
-								</div>
-								<div class="days" data-group="days" data-toggle="modal" data-target=".thermo-select-plan--modal">
-
-								</div>
+						<!-- Responsive calendar - START -->
+						<div class="responsive-calendar">
+							<div class="controls">
+								<a class="pull-left" data-go="prev"><div class="btn btn-primary">Prev</div></a>
+								<h4>
+									<span data-head-year></span>
+									<span data-head-month></span>
+								</h4>
+								<a class="pull-right" data-go="next"><div class="btn btn-primary">Next</div></a>
 							</div>
-							<!-- Responsive calendar - END -->
+							<hr/>
+							<div class="day-headers">
+								<div class="day header">Mon</div>
+								<div class="day header">Tue</div>
+								<div class="day header">Wed</div>
+								<div class="day header">Thu</div>
+								<div class="day header">Fri</div>
+								<div class="day header">Sat</div>
+								<div class="day header">Sun</div>
+							</div>
+							<div class="days" data-group="days" data-toggle="modal" data-target=".thermo-select-plan--modal">
+
+							</div>
 						</div>
+						<!-- Responsive calendar - END -->
 					</div>
 				</div>
 			</div>
@@ -228,18 +225,13 @@
 						<div class="col-xs-9">
 							{{planToChoose.ref.name}}
 							<div class="thermo-plan--horizontal">
-								<div class="thermo-plan--labels visible-odd">
-									<div class="thermo-plan--label" ng-repeat="interval in planToChoose.ref.intervals" style="left: {{interval.labelPosition}}%">{{interval.label}}</div>
-									<div class="thermo-plan--label" style="left: 100%">23:59</div>
-								</div>
-
 								<div class="thermo-plan--chart clearfix">
 									<div class="thermo-plan--period color-{{interval.temp.ref.color}} clearfix" style="width: {{interval.blockPosition}}%;" ng-repeat="interval in planToChoose.ref.intervals | filter:blockPosition">
 										<i class="{{interval.temp.ref.iconClass}}"></i>
 									</div>
 								</div>
 
-								<div class="thermo-plan--labels visible-even">
+								<div class="thermo-plan--labels">
 									<div class="thermo-plan--label" ng-repeat="interval in planToChoose.ref.intervals" style="left: {{interval.labelPosition}}%">{{interval.label}}</div>
 									<div class="thermo-plan--label" style="left: 100%">23:59</div>
 								</div>
