--- a/views/layout.handlebars
+++ b/views/layout.handlebars
@@ -25,7 +25,7 @@
 
 		<script src="{{assetsBasePath}}/build/main.js"></script>
 	</head>
-	<body>
+	<body style="background-image: url({{assetsBasePath}}/images/{{backgroundImage}})">
 		{{{body}}}
 	</body>
 </html>
