--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -75,7 +75,7 @@
 
 		<div class="col-xs-12 col-sm-6 col-md-7 col-lg-8">
 			<div class="row">
-				<div ng-repeat="(id, data) in inside.individual" class="col-xs-12 col-md-4 col-lg-6">
+				<div ng-repeat="(id, data) in inside.individual" class="col-xs-12 col-md-6">
 					<div class="thermo-room thermo-component">
 						<div class="thermo-room--status color-bg-{{scope().restartSensorInProgress ? 'yellow' : (data.active ? 'green' : 'red')}}"></div>
 						<div class="thermo-room--label">{{roomIdToLabel[id] || id}} <span>({{id}})</span></div>
